# Heavens-Line-Bot

./: main.py  pyproject.toml
src/classes/: OCR.py  Screenshot.py
